--- a/file-uploader-server/package.json
+++ b/file-uploader-server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.16.4",
+    "express-rate-limit": "^3.5.1",
     "gridfs-stream": "^1.1.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.5.6",
